--- a/scrum-project/Gemfile
+++ b/scrum-project/Gemfile
@@ -7,7 +7,10 @@ ruby '2.5.1'
 gem 'rails', '~> 5.2.2'
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3'
-gem 'devise', git: 'https://github.com/plataformatec/devise.git'
+# Use devise for authentication purposes
+gem 'devise'
+# Creates a graph to understand better your project
+gem 'ruby-graphviz'
 # Use Puma as the app server
 gem 'puma', '~> 3.11'
 # Use SCSS for stylesheets
